--- a/testdata/invalid.yaml
+++ b/testdata/invalid.yaml
@@ -11,17 +11,4 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
----
-kind: Secret
-metadata:
-  name: secret1
-  namespace: default
-apiVersion: v1
-stringData:
-  application.yaml: |
-    abc:
-      def:
-        leaf1: 123
-        leaf2: Hello
-data:
-  key1: aGVsbG8gd29ybGQK
+this is not a yaml file :)
