--- a/testdata/doc2.yaml
+++ b/testdata/doc2.yaml
@@ -12,11 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ---
-level1:
-  level2a:
-    level3a: leaf1
-    level3b: 456
-  level2b: 3
-  l1:
-    - a
-    - 1
+root:
+  - str leaf
+  - dict:
+      leaf1: 1
+      leaf2: a
+  - - 1
+    - 2
