--- a/testdata/secret3.yaml
+++ b/testdata/secret3.yaml
@@ -17,5 +17,5 @@ metadata:
   name: secret2
 apiVersion: v1
 stringData:
-  prop1: This is value
-  prop2.level2.level3: 123
+  prop1: "This is value"
+  prop2.level2.level3: "123"
