--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,13 @@ jobs:
         run: go build -v ./...
 
       - name: Test
-        run: go test -race -coverprofile=coverage.out -covermode=atomic -v ./...
+        run: go test -race -coverprofile=coverage.out -covermode=atomic -json ./... > testresults.json
+
+      - name: Upload Go test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: Test results
+          path: testresults.json
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
