--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -41,8 +41,7 @@ ci/config:
 component/analytics:
   - changed-files:
       - any-glob-to-any-file:
-          - '**/*_test.go'
-          - testdata/**
+          - analytics/*
 component/dom:
   - changed-files:
       - any-glob-to-any-file:
