--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,6 +39,13 @@ repos:
         files: testdata/.*\.yaml
         args:
           - -c=.yamllint-config.yaml
+  - repo: https://github.com/santhosh-tekuri/jsonschema
+    rev: v6.0.1
+    hooks:
+      - id: jsonschema-validate
+        files: testdata/pipeline.*\.yaml
+        args:
+          - schemas/pipeline.json
   - repo: https://github.com/gitleaks/gitleaks
     rev: v8.24.2
     hooks:
