--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,6 +39,10 @@ jobs:
         with:
           go-version: '1.24.1'
 
+      - name: Install lint tools
+        run: |
+          go install golang.org/x/tools/cmd/goimports@latest
+
       - name: Check out code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
