--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,7 @@ repos:
     hooks:
       - id: go-mod-tidy
       - id: go-fmt
+      - id: go-imports
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.37.1
     hooks:
