🔨 Analytics: enhance deduplicator tests
Add notes about implementation

Signed-off-by: Richard Kosegi <richard.kosegi@gmail.com>

--- a/testdata/k8s_values1.yaml
+++ b/testdata/k8s_values1.yaml
@@ -31,3 +31,10 @@ my-app:
                 operator: In
                 values:
                   - my-app
+  resources:
+    limits:
+      memory: 256Mi
+      cpu: 200m
+    requests:
+      memory: 128Mi
+      cpu: 100m
