--- a/testdata/k8s_values2.yaml
+++ b/testdata/k8s_values2.yaml
@@ -33,3 +33,10 @@ my-app:
                   - my-app
   container:
     - name: nginx
+  resources:
+    limits:
+      memory: 256Mi
+      cpu: 200m
+    requests:
+      memory: 128Mi
+      cpu: 100m
