--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -18,14 +18,13 @@ on:
     types: [opened]
 
 permissions:
-  contents: write
-  issues: write
-  pull-requests: write
+  contents: read
 
 jobs:
   apply-file-based-labels:
     permissions:
       pull-requests: write
+      issues: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5.0.0
