👷 Use head of golangci-lint repo until new release
More details: https://github.com/golangci/golangci-lint/issues/6017

Signed-off-by: Richard Kosegi <richard.kosegi@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
           - --autofix
           - --indent=2
   - repo: https://github.com/golangci/golangci-lint
-    rev: v2.4.0
+    rev: 3641f1c8f5bf57447e805d22484247748e3776aa
     hooks:
       - id: golangci-lint
   - repo: https://github.com/dnephin/pre-commit-golang
