--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,8 +27,8 @@ repos:
 #    rev: 3641f1c8f5bf57447e805d22484247748e3776aa
 #    hooks:
 #      - id: golangci-lint
-  - repo: https://github.com/dnephin/pre-commit-golang
-    rev: v0.5.1
+  - repo: https://github.com/tekwizely/pre-commit-golang
+    rev: v1.0.0-rc.2
     hooks:
       - id: go-mod-tidy
       - id: go-fmt
