🔧 Diff: Use path.Path where possible
Also, add support for user-supplied list diffing function

Signed-off-by: Richard Kosegi <richard.kosegi@gmail.com>

--- a/testdata/k8s_values2.yaml
+++ b/testdata/k8s_values2.yaml
@@ -33,6 +33,15 @@ my-app:
                   - my-app
   container:
     - name: nginx
+  env:
+    - name: ENV1
+      value: abc
+    - name: ENV2
+      value: xyw
+    - name: MY_POD_NAMESPACE
+      valueFrom:
+        fieldRef:
+          fieldPath: metadata.namespace
   resources:
     limits:
       memory: 256Mi
