--- a/testdata/k8s_values1.yaml
+++ b/testdata/k8s_values1.yaml
@@ -31,6 +31,15 @@ my-app:
                 operator: In
                 values:
                   - my-app
+  env:
+    - name: ENV2
+      value: xyz
+    - name: ENV1
+      value: abc
+    - name: MY_POD_IP
+      valueFrom:
+        fieldRef:
+          fieldPath: status.podIP
   resources:
     limits:
       memory: 256Mi
